2002-03-18  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): void domain for the -E command line argment
	means all 5 domains

2002-03-18  Sam Steingold  <sds@gnu.org>

	added CUSTOM:*PARSE-NAMESTRING-DOT-FILE* user option
	* init.lisp (*source-file-types*, *compiled-file-types*): list
	strings, not pathnames
	(load): modified accordingly
	(search-file): EXTENSION is a list of strings, not pathnames
	* cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp, cfgunix.lisp:
	* cfgwin32.lisp: set *PARSE-NAMESTRING-DOT-FILE* to :NAME
	* compiler.lisp: do not use pathname literals
	(merge-extension): new function
	(compile-file-pathname-helper, compile-file): use it
	* constsym.d (*PARSE-NAMESTRING-DOT-FILE*): added
	* spvw.d (init_symbol_values): defvar it
	* defs1.lisp (load-logical-pathname-translations): pass strings,
	not pathnames, to SEARCH-FILE
	* io.d (pr_orecord): when compiling, print pathnames as
	#s(pathname) without #p""
	* pathname.d (split_name_type): respect *PARSE-NAMESTRING-DOT-FILE*
	* savemem.lisp (saveinitmem): do not use pathname literals

2002-03-17  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-stream-flush-buffer): use
	WRITE-CHAR-SEQUENCE instead of WRITE-SEQUENCE for the benefit of
	dribbling when the output streams are reset so that it is not
	clear that they are character streams
	* dribble.lisp (dribble-reset): new function
	(dribble): reset *DRIBBLE-STREAM* to NIL after dribbling is over
	* savemem.lisp (saveinitmem): new option :verbose;
	call DRIBBLE-RESET in the temporary *DRIVER*:
	this fixes a bug in images saved after DRIBBLE
	Reported by Peter Wood <peter.wood@worldonline.dk>

2002-03-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* describe.lisp (describe-object): FOREIGN-POINTER is present
	when UNIX or DIR-KEY are present too;
	handle FOREIGN-FUNCTION only under FUNCTION, not undet T too, and
	print its full foreign type

2002-03-15  Sam Steingold  <sds@gnu.org>

	minor error reporting unification