@@ -200,7 +200,7 @@ enum __AV_alist_flags
 #if defined(__i386__) && defined(_MSC_VER) /* MSVC 4.0 */
 				  __AV_MSVC_STRUCT_RETURN |
 #endif
-#if defined(__hppa__) && defined(__GNUC__) && (__GNUC_MINOR__ < 7)
+#if defined(__hppa__) && defined(__GNUC__) && (__GNUC__ < 3) && (__GNUC_MINOR__ < 7)
 				  __AV_OLDGCC_STRUCT_RETURN |
 #endif
   				  0,
