@@ -274,7 +274,7 @@
   #ifdef GNU
     #if (__GNUC__ >= 2) && !defined(UNIX_HPUX) && !defined(NO_FAST_DISPATCH) # work around HP-UX Linker Bug
       #define FAST_DISPATCH
-      #if (__GNUC_MINOR__ >= 7) # work around gcc-2.6.3 Bug (-fno-defer-pop ginge auch)
+      #if (__GNUC__ >= 3) || (__GNUC_MINOR__ >= 7) # work around gcc-2.6.3 Bug (-fno-defer-pop ginge auch)
         #define FAST_DISPATCH_THREADED
       #endif
     #endif
